--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,8 @@
 }
 
 .navbar{
-    background-color: black;
-    width: 100% !important;
+    background-color: rgb(0, 0, 0);
+    width: 100% !important; 
 }
 
 .nav-link{
@@ -33,12 +33,13 @@ nav a:hover{
 }
 
 .jumbotron{
-height: 400px;
-background-color: #000;
-background-image: url(./img/fondo.jpg);
-background-size: cover;
-background-position: bottom;
-width: 100%;
+    margin-top: 75px;
+    height: 400px;
+    background-color: #000;
+    background-image: url(./img/fondo.jpg);
+    background-size: cover;
+    background-position: bottom;
+    width: 100%;
 }
 
 .jumbotron h1{
@@ -70,10 +71,10 @@ width: 100%;
 }
 
 .variedades{
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content:space-between;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-between;
 }
 
 h2{
@@ -184,6 +185,7 @@ color: #000;
 }
 /* Inicia page Compra */
 .compra{
+    margin-top: 75px;
     background-color: #000;
     height: 100vh;
     width: 100%;
@@ -222,7 +224,7 @@ color: #000;
 }
 /* Inicia page Variedades */
 .variedades{
-    margin-top: 25px;
+    margin-top: 100px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -249,6 +251,7 @@ a:hover{
 }
 /* Inicia page Nosotros */
 .nosotros{
+    margin-top: 75px;
     background-color: #000;
     color: #fff;
     padding-bottom: 10px;
@@ -286,6 +289,7 @@ a:hover{
     }
 /* Inicia page Sugerencias */
 .blog{
+    margin-top: 75px;
     background-color: #000;
     padding: 25px 10px 25px 20px;
     color: #fff;
