--- a/styles.css
+++ b/styles.css
@@ -1,340 +1,345 @@
-@import url('https://fonts.googleapis.com/css2?family=Alumni+Sans+Collegiate+One&family=Dawning+of+a+New+Day&family=Playpen+Sans:wght@200&family=Simonetta:wght@400;900&display=swap');
-
-*{
-    margin: 0; 
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Simonetta', serif;
+@import url("https://fonts.googleapis.com/css2?family=Alumni+Sans+Collegiate+One&family=Dawning+of+a+New+Day&family=Playpen+Sans:wght@200&family=Simonetta:wght@400;900&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Simonetta", serif;
 }
 
-.navbar{
-    background-color: rgb(0, 0, 0);
-    width: 100% !important; 
+.navbar {
+  background-color: rgb(0, 0, 0);
+  width: 100% !important;
+}
+.navbar .nav-link {
+  color: #fff !important;
+}
+.navbar .nav-item-shop {
+  font-weight: 700;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-style: normal;
+  font-size: 14px;
+  text-shadow: none;
+  background-color: rgba(204, 56, 56, 0.63);
+  padding: 2px;
+  border-radius: 7px;
+}
+.navbar a:hover {
+  color: #CC3939 !important;
 }
 
-.nav-link{
-    color: #fff !important;
+.jumbotron {
+  margin-top: 75px;
+  height: 400px;
+  background-color: #000;
+  background-image: url(./img/fondo.jpg);
+  background-size: cover;
+  background-position: bottom;
+  width: 100%;
+}
+.jumbotron h1 {
+  font-weight: 900;
+  font-size: 25px;
+  text-transform: uppercase;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 50px;
+}
+.jumbotron a {
+  background-color: hsla(0, 0%, 0%, 0.737);
+  text-decoration: none;
+  font-weight: 700;
+  border-radius: 7px;
+  color: #fff;
+  padding: 5px 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 
-nav a:hover{
-    color: #CC3939 !important
+.jumbotron a:hover {
+  color: #CC3939 !important;
 }
 
-.nav-item-shop{
-    font-weight: 700;
-    text-transform: uppercase;
-    text-decoration: none;
-    font-style:normal;
-    font-size: 14px;
-    text-shadow: none;
-    background-color: rgba(204, 56, 56, 0.63);
-    padding: 2px;
-    border-radius: 7px;
+h2 {
+  margin-top: 20px;
+  margin-left: 10px;
+  font-weight: 700;
 }
 
-.jumbotron{
-    margin-top: 75px;
-    height: 400px;
-    background-color: #000;
-    background-image: url(./img/fondo.jpg);
-    background-size: cover;
-    background-position: bottom;
-    width: 100%;
+.cta-variedades a {
+  text-decoration: underline;
+  margin-left: 15px;
+  color: #CC3939;
+  font-weight: 700;
+  font-size: larger;
 }
 
-.jumbotron h1{
-    font-weight: 900;
-    font-size: 25px;
-    text-transform: uppercase;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    margin-bottom: 50px;
+.cta-variedades a:hover {
+  color: #000;
 }
 
-.jumbotron a{
-    background-color: hsla(0, 0%, 0%, 0.737);
-    text-decoration: none;
-    font-weight: 700;
-    border-radius: 7px;
-    color: #fff;
-    padding: 5px 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
+.variedades {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.variedades img {
+  height: 230px;
+  margin-bottom: 45px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.variedades h5 {
+  font-weight: 700;
 }
 
-.jumbotron a:hover{
-    color: #CC3939 !important
+.sug-izq {
+  padding-top: 25px;
+  background-color: black;
+  height: 300px;
+  color: #fff;
+  font-weight: 900;
+  text-align: center;
+}
+.sug-izq h3 {
+  font-weight: 900;
+  margin-bottom: 20px;
+}
+.sug-izq .sug-descuento {
+  font-size: 50px;
+  color: #CC3939;
+}
+.sug-izq a {
+  text-decoration: none;
+  font-weight: 700;
+  border-radius: 7px;
+  color: #fff;
+  padding: 5px 10px;
+  background-color: #CC3939;
+}
+.sug-izq a:hover {
+  color: #000;
 }
 
-.variedades{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content:space-between;
+.sug-der {
+  background-color: black;
+  background-image: url(./img/crudasHorno.png);
+  background-size: cover;
+  background-position: bottom;
 }
 
-h2{
-    margin-top: 20px;
-    margin-left: 10px;
-    font-weight: 700;
+footer {
+  background-color: #000;
+  color: #fff;
+  text-align: center;
+  height: 100px;
+}
+footer p {
+  margin-top: 20px;
+}
+footer a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 25px;
+  letter-spacing: 15px;
+}
+footer a:hover {
+  color: #CC3939;
 }
 
-.cta-variedades a{
-    text-decoration: underline;
-    margin-left: 15px;
-    color: #CC3939;
-    margin-bottom: 9px;
-    font-weight: 700;
-    font-size: larger;
+.whatsapp {
+  height: 50px;
+  width: 50px;
+  background-color: rgba(204, 56, 56, 0.63);
+  color: #fff;
+  position: fixed;
+  text-align: center;
+  right: 40px;
+  bottom: 40px;
+  font-size: 35px;
+  line-height: 40px;
+  border-radius: 50%;
+  text-decoration: none;
+  margin-right: 2px;
+}
+.whatsapp i {
+  margin-top: 5px;
+  text-decoration: none;
+}
+.whatsapp i:hover {
+  color: #000;
 }
 
-.cta-variedades a:hover{
-    color: #000;
-}
-
-.variedades img{
-height: 230px;
-margin-bottom: 5px;
-object-fit: cover;
-}
-
-.variedades h5{
-    font-weight: 700;
-}
-
-.sug-izq{
-    padding-top: 25px;
-    background-color: black;
-    height: 300px;  
-    color: #fff;
-    font-weight: 900;
-    text-align: center;
-} 
-
-.sug-izq h3{
-font-weight: 900;
-margin-bottom: 20px;
-}
-
-.sug-descuento{
-    font-size: 50px;
-    color: #CC3939;
-}
-
-.sug-izq a{
-    text-decoration: none;
-    font-weight: 700;
-    border-radius: 7px;
-    color: #fff;
-    padding: 5px 10px;
-    background-color: #CC3939;
-}
-
-.sug-izq a:hover{
-    color: #000;
-}
-.sug-der{
-background-color: black;
-background-image: url(./img/crudasHorno.png);
-background-size: cover;
-background-position: bottom;
-}
-
-footer{
-    background-color: #000;
-    color: #fff;
-    text-align: center;
-    height: 100px;
-}
-footer a{
-    color: #fff;
-    text-decoration: none;
-    font-size: 25px;
-    letter-spacing: 15px;
-}
-footer a:hover{
-    color: #CC3939;
-}
-.whatsapp{
-    height: 50px;
-    width: 50px;
-    background-color: rgba(204, 56, 56, 0.63);
-    color:#fff;
-    position: fixed;
-    text-align: center;
-    right: 40px;
-    bottom: 40px;
-    font-size: 35px;
-    line-height: 40px;
-    border-radius: 50%;
-    text-decoration: none;
-    margin-right: 2px;
-}
-
-.whatsapp i{
-    margin-top: 5px;
-    text-decoration: none;
-}
-
-.whatsapp i:hover{
-color: #000;
-}
 /* Inicia page Compra */
-.compra{
-    margin-top: 75px;
-    background-color: #000;
-    height: 100vh;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-image: url(./img/crudas.jpg);
-    background-size: cover;
-    background-position: center;
-}  
-.compra h1{
-    margin: 45px 0 25px;
-    color: #fff;
-    font-weight: 900;
+.compra {
+  margin-top: 75px;
+  background-color: #000;
+  height: 100vh;
+  width: 100%;
+  background-image: url(./img/crudas.jpg);
+  background-size: cover;
+  background-position: center;
 }
-.formulario{
-    width: 600px;
-    margin: 45px 0 30px;
+.compra h1 {
+  margin: 45px 0 25px;
+  padding-top: 20px;
+  color: #fff;
+  font-weight: 900;
 }
-.compra input{
-    margin: 10px;
+.compra .formulario {
+  max-width: 600px;
+  color: #8f7c7c;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 100px;
 }
-.compra button{
-    margin-left: 80px;
-    margin-bottom: 10px;
-    background-color:#CC3939;
-    color: #fff;
-    margin: 5px;
-    padding: 5px 12px;
-    font-weight: 900;
-    border-radius: 8px;
+.compra .boton {
+  background-color: #CC3939;
+  color: #fff;
+  padding: 5px 12px;
+  font-weight: 900;
+  border-radius: 8px;
+  margin: 0 200px 0 200px;
+  min-width: 100px;
+}
+.compra .boton:hover {
+  color: #000;
 }
 
-.compra button:hover{
-    color: #000
-}
 /* Inicia page Variedades */
-.variedades{
-    margin-top: 100px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+.variedades h1 {
+  font-weight: 900;
+  margin-top: 100px;
 }
-.variedades h4{
-    font-weight: 900;
+.variedades .variedades-cards {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
-.call-variedades{
-font-size: x-large;
-text-decoration: underline;
-font-weight: 900;
-color: #CC3939;
-display: flex;
-flex-direction: column;
-align-items: center;
-margin: 20px 0 20px;
+.variedades .card-img-top {
+  margin-bottom: 0;
 }
-a{
-    text-decoration: none;
+.variedades .card-title {
+  font-size: 15px;
+  font-weight: 900;
+  text-transform: uppercase;
 }
-a:hover{
-    color: #000;
+.variedades h2 {
+  font-weight: 900;
+  padding: 0;
 }
+
+.call-variedades {
+  font-size: x-large;
+  text-decoration: underline;
+  font-weight: 900;
+  color: #CC3939;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px 0 20px;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  color: #000;
+}
+
 /* Inicia page Nosotros */
-.nosotros{
-    margin-top: 75px;
-    background-color: #000;
-    color: #fff;
-    padding-bottom: 10px;
+.nosotros {
+  margin-top: 75px;
+  background-color: #000;
+  color: #fff;
+  padding-bottom: 10px;
 }
-.nosotros h1{
-    margin: 0px 0 0 25px;
-    padding: 10px;
-    font-weight: 900;
+.nosotros h1 {
+  margin-left: 25px;
+  padding: 10px;
+  font-weight: 900;
 }
-.nosotros p{
-    margin-left: 20px;
-    text-align: justify;
-    max-width: 90%;
+.nosotros p {
+  margin-left: 20px;
+  text-align: justify;
+  max-width: 90%;
 }
-.nosotros section img{
-    object-fit: cover;
-    height: 500px;
+.nosotros section img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 500px;
 }
-.nosotros a{
-    margin: 20px;
-    margin-bottom: 20px;
-    text-decoration: none;
-    text-transform: uppercase;
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px 20px;
-    font-weight: 900;
-    background-color: rgba(204, 56, 56, 0.63);
-    border-radius: 7px;
+.nosotros a {
+  margin: 20px;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px 20px;
+  font-weight: 900;
+  background-color: rgba(204, 56, 56, 0.63);
+  border-radius: 7px;
 }
-.nosotros a span:hover{
-    color: #000;
-    }
+.nosotros a span:hover {
+  color: #000;
+}
+
 /* Inicia page Sugerencias */
-.blog{
-    margin-top: 75px;
-    background-color: #000;
-    padding: 25px 10px 25px 20px;
-    color: #fff;
+.blog {
+  margin-top: 75px;
+  background-color: #000;
+  padding: 25px 10px 25px 20px;
+  color: #fff;
+}
+.blog h1 {
+  font-weight: 900;
+}
+.blog .video {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 25px;
+}
+.blog .video h2 {
+  font-weight: 100;
+  font-size: 25px;
+  color: #CC3939;
+  text-transform: uppercase;
+}
+.blog h3 {
+  padding-top: 10px;
+  font-weight: 900;
+}
+.blog .email {
+  color: #CC3939;
+  font-weight: 900;
+  max-width: 600px;
+}
+.blog button {
+  margin-left: 80px;
+  margin-bottom: 10px;
+  background-color: #CC3939;
+  color: #fff;
+  margin: 5px;
+  padding: 5px 12px;
+  font-weight: 900;
+  border-radius: 8px;
+}
+.blog button:hover {
+  color: #000;
 }
 
-.blog h1{
-font-weight: 900;
-}
-
-.blog h2{
-    font-weight: 100;
-    font-size: 25px;
-}
-
-.video{
-    display: flex;
-    flex-direction: column;
-    object-position: center;
-    padding-bottom: 25px;
-}
-
-.email{
-    color: #CC3939;
-    font-weight: 900;
-}
-
-.blog h3{
-    font-weight: 900;
-}
-
-.blog button{
-    margin-left: 80px;
-    margin-bottom: 10px;
-    background-color:#CC3939;
-    color: #fff;
-    margin: 5px;
-    padding: 5px 12px;
-    font-weight: 900;
-    border-radius: 8px;
-}
-
-.blog a:hover{
-    color: #000;
-}
-
-hr{
-    margin: 0;
-}
+hr {
+  margin: 0;
+}/*# sourceMappingURL=styles.css.map */
