--- a/styles.css
+++ b/styles.css
@@ -216,6 +216,7 @@ footer a:hover {
 .variedades h1 {
   font-weight: 900;
   margin-top: 100px;
+  margin-left: 25px;
 }
 .variedades .variedades-cards {
   display: flex;
@@ -312,10 +313,13 @@ a:hover {
   padding-bottom: 25px;
 }
 .blog .video h2 {
-  font-weight: 100;
+  font-weight: 900;
   font-size: 25px;
   color: #CC3939;
   text-transform: uppercase;
+}
+.blog .video iframe {
+  max-width: 100%;
 }
 .blog h3 {
   padding-top: 10px;
