--- a/styles.scss
+++ b/styles.scss
@@ -238,7 +238,8 @@ background-position: center;
 
     h1{
     font-weight: 900;
-    margin-top: 100px;  
+    margin-top: 100px;
+    margin-left: 25px;  
     }
 
     .variedades-cards{
@@ -332,24 +333,30 @@ background-color: #000;
 padding: 25px 10px 25px 20px;
 color: #fff;
 
+
     h1{
     font-weight: 900;
     }
 
     .video{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding-bottom: 25px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding-bottom: 25px;
 
         h2{
-        font-weight: 100;
+        font-weight: 900;
         font-size: 25px;
         color: #CC3939;
         text-transform: uppercase;
         }
+
+        iframe {
+            max-width: 100%;
+        }
     }
+
 
     h3{
     padding-top: 10px;
