--- a/styles.scss
+++ b/styles.scss
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Alumni+Sans+Collegiate+One&family=Dawning+of+a+New+Day&family=Playpen+Sans:wght@200&family=Simonetta:wght@400;900&display=swap');
 
+$color-palos: #CC3939;
+
+
 *{
 margin: 0;
 padding: 0;
@@ -27,7 +30,7 @@ width: 100% !important;
     border-radius: 7px;
     }
     a:hover{
-        color: #CC3939 !important
+        color: $color-palos !important
         }
 }
 
@@ -62,12 +65,11 @@ display: flex;
 flex-direction: column;
 align-items: center;
 text-align: center;
-
 }
 }
 
 .jumbotron a:hover{
-color: #CC3939 !important
+color: $color-palos 
 }
 
 h2{
@@ -79,7 +81,7 @@ font-weight: 700;
 .cta-variedades a{
 text-decoration: underline;
 margin-left: 15px;
-color: #CC3939;
+color: $color-palos;
 font-weight: 700;
 font-size: larger;
 }
@@ -98,10 +100,13 @@ justify-content:space-between;
     height: 230px;
     margin-bottom: 45px;
     object-fit: cover;
+    border-radius: 2px;
     }
 
-    h5{
+    h4{
+    margin-top: 10px;
     font-weight: 700;
+    font-size: 20px;
     }
 }
 
@@ -120,7 +125,7 @@ margin-bottom: 20px;
 
 .sug-descuento{
     font-size: 50px;
-    color: #CC3939;
+    color: $color-palos;
 }
 
 a{
@@ -129,7 +134,7 @@ font-weight: 700;
 border-radius: 7px;
 color: #fff;
 padding: 5px 10px;
-background-color: #CC3939;
+background-color: $color-palos;
 }
 
     a:hover{
@@ -162,7 +167,7 @@ height: 100px;
     }
 
     a:hover{
-    color: #CC3939;
+    color: $color-palos;
     }
 }
 
@@ -218,7 +223,7 @@ background-position: center;
     }
 
     .boton{
-        background-color:#CC3939;
+        background-color:$color-palos;
         color: #fff;
         padding: 5px 12px;
         font-weight: 900;
@@ -247,7 +252,17 @@ background-position: center;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    @media (min-width: 400px) and (max-width: 800px){
+        display: grid;
+        grid-template-columns: 200px 200px;
     }
+    @media (max-width: 399px){
+        display: grid;
+        grid-template-columns: 200px;
+    }
+    }
+
+
 
     .card-img-top{
         margin-bottom: 0;
@@ -268,7 +283,7 @@ background-position: center;
 font-size: x-large;
 text-decoration: underline;
 font-weight: 900;
-color: #CC3939;
+color: $color-palos;
 display: flex;
 flex-direction: column;
 align-items: center;
@@ -327,12 +342,12 @@ padding-bottom: 10px;
 }
 
 /* Inicia page Sugerencias */
+
 .blog{
 margin-top: 75px;
 background-color: #000;
 padding: 25px 10px 25px 20px;
 color: #fff;
-
 
     h1{
     font-weight: 900;
@@ -348,15 +363,35 @@ color: #fff;
         h2{
         font-weight: 900;
         font-size: 25px;
-        color: #CC3939;
+        color: $color-palos;
         text-transform: uppercase;
         }
 
         iframe {
-            max-width: 100%;
+        max-width: 100%;
+        animation-duration: infinite;
         }
     }
 
+    .sugerencia{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding-bottom: 25px;
+
+        h2{
+        font-weight: 900;
+        font-size: 25px;
+        color: $color-palos;
+        text-transform: uppercase;
+        }
+        img{
+            width: 300px;
+            height: 425px;
+            max-width: 100%;
+        }
+    }
 
     h3{
     padding-top: 10px;
@@ -364,7 +399,7 @@ color: #fff;
     }
 
     .email{
-    color: #CC3939;
+    color: $color-palos;
     font-weight: 900;
     max-width: 600px;
     }
@@ -372,7 +407,7 @@ color: #fff;
     button{
     margin-left: 80px;
     margin-bottom: 10px;
-    background-color:#CC3939;
+    background-color: $color-palos;
     color: #fff;
     margin: 5px;
     padding: 5px 12px;
