--- a/styles.scss
+++ b/styles.scss
@@ -4,222 +4,224 @@ $color-palos: #CC3939;
 
 
 *{
-margin: 0;
-padding: 0;
-box-sizing: border-box;
-font-family: 'Simonetta', serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Simonetta', serif;
 }
 
 .navbar{
-background-color: rgb(0, 0, 0);
-width: 100% !important;
+    background-color: rgb(0, 0, 0);
+    width: 100% !important;
 
     .nav-link{
-    color: #fff !important;
+        color: #fff !important;
     }
 
     .nav-item-shop{
-    font-weight: 700;
-    text-transform: uppercase;
-    text-decoration: none;
-    font-style:normal;
-    font-size: 14px;
-    text-shadow: none;
-    background-color: rgba(204, 56, 56, 0.63);
-    padding: 2px;
-    border-radius: 7px;
+        font-weight: 700;
+        text-transform: uppercase;
+        text-decoration: none;
+        font-style:normal;
+        font-size: 14px;
+        text-shadow: none;
+        background-color: rgba(204, 56, 56, 0.63);
+        padding: 2px;
+        border-radius: 7px;
     }
+
     a:hover{
         color: $color-palos !important
-        }
+    }
 }
 
 .jumbotron{
-margin-top: 75px;
-height: 400px;
-background-color: #000;
-background-image: url(./img/fondo.jpg);
-background-size: cover;
-background-position: bottom;
-width: 100%;
+    margin-top: 75px;
+    height: 400px;
+    background-color: #000;
+    background-image: url(./img/fondo.jpg);
+    background-size: cover;
+    background-position: bottom;
+    width: 100%;
 
-h1{
-font-weight: 900;
-font-size: 25px;
-text-transform: uppercase;
-display: flex;
-flex-direction: column;
-align-items: center;
-text-align: center;
-margin-bottom: 50px;
-}
+    h1{
+        font-weight: 900;
+        font-size: 25px;
+        text-transform: uppercase;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        margin-bottom: 50px;
+    }
 
-a{
-background-color: hsla(0, 0%, 0%, 0.737);
-text-decoration: none;
-font-weight: 700;
-border-radius: 7px;
-color: #fff;
-padding: 5px 10px;
-display: flex;
-flex-direction: column;
-align-items: center;
-text-align: center;
-}
+    a{
+        background-color: hsla(0, 0%, 0%, 0.737);
+        text-decoration: none;
+        font-weight: 700;
+        border-radius: 7px;
+        color: #fff;
+        padding: 5px 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
 }
 
 .jumbotron a:hover{
-color: $color-palos 
+    color: $color-palos 
 }
 
 h2{
-margin-top: 20px;
-margin-left: 10px;
-font-weight: 700;
+    margin-top: 20px;
+    margin-left: 10px;
+    font-weight: 700;
 }
 
 .cta-variedades a{
-text-decoration: underline;
-margin-left: 15px;
-color: $color-palos;
-font-weight: 700;
-font-size: larger;
+    text-decoration: underline;
+    margin-left: 15px;
+    color: $color-palos;
+    font-weight: 700;
+    font-size: larger;
 }
 
 .cta-variedades a:hover{
     color: #000;
-    }
+}
 
 .variedades{
-width: 100%;
-display: flex;
-flex-direction: column;
-justify-content:space-between;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-between;
 
     img{
-    height: 230px;
-    margin-bottom: 45px;
-    object-fit: cover;
-    border-radius: 2px;
+        height: 230px;
+        margin-bottom: 45px;
+        object-fit: cover;
+        border-radius: 2px;
     }
 
     h4{
-    margin-top: 10px;
-    font-weight: 700;
-    font-size: 20px;
+        margin-top: 10px;
+        font-weight: 700;
+        font-size: 20px;
     }
 }
 
 .sug-izq{
-padding-top: 25px;
-background-color: black;
-height: 300px;
-color: #fff;
-font-weight: 900;
-text-align: center;
+    padding-top: 25px;
+    background-color: black;
+    height: 300px;
+    color: #fff;
+    font-weight: 900;
+    text-align: center;
 
-h3{
-font-weight: 900;
-margin-bottom: 20px;
-}
+    h3{
+        font-weight: 900;
+        margin-bottom: 20px;
+    }
 
-.sug-descuento{
-    font-size: 50px;
-    color: $color-palos;
-}
+    .sug-descuento{
+        font-size: 50px;
+        color: $color-palos;
+    }
 
-a{
-text-decoration: none;
-font-weight: 700;
-border-radius: 7px;
-color: #fff;
-padding: 5px 10px;
-background-color: $color-palos;
-}
+    a{
+        text-decoration: none;
+        font-weight: 700;
+        border-radius: 7px;
+        color: #fff;
+        padding: 5px 10px;
+        background-color: $color-palos;
+    }
 
     a:hover{
-    color: #000;
+        color: #000;
     }
 }
 
 .sug-der{
-background-color: black;
-background-image: url(./img/crudasHorno.png);
-background-size: cover;
-background-position: bottom;
+    background-color: black;
+    background-image: url(./img/crudasHorno.png);
+    background-size: cover;
+    background-position: bottom;
 }
 
 footer{
-background-color: #000;
-color: #fff;
-text-align: center;
-height: 100px;
+    background-color: #000;
+    color: #fff;
+    text-align: center;
+    height: 100px;
 
     p{
         margin-top: 20px;
     }
 
     a{
-    color: #fff;
-    text-decoration: none;
-    font-size: 25px;
-    letter-spacing: 15px;
+        color: #fff;
+        text-decoration: none;
+        font-size: 25px;
+        letter-spacing: 15px;
     }
 
     a:hover{
-    color: $color-palos;
+        color: $color-palos;
     }
 }
 
 .whatsapp{
-height: 50px;
-width: 50px;
-background-color: rgba(204, 56, 56, 0.63);
-color:#fff;
-position: fixed;
-text-align: center;
-right: 40px;
-bottom: 40px;
-font-size: 35px;
-line-height: 40px;
-border-radius: 50%;
-text-decoration: none;
-margin-right: 2px;
+    height: 50px;
+    width: 50px;
+    background-color: rgba(204, 56, 56, 0.63);
+    color:#fff;
+    position: fixed;
+    text-align: center;
+    right: 40px;
+    bottom: 40px;
+    font-size: 35px;
+    line-height: 40px;
+    border-radius: 50%;
+    text-decoration: none;
+    margin-right: 2px;
 
     i{
-    margin-top: 5px;
-    text-decoration: none;
+        margin-top: 5px;
+        text-decoration: none;
     }
 
     i:hover{
-    color: #000;
+        color: #000;
     }
 }
 
 /* Inicia page Compra */
 .compra{
-margin-top: 75px;
-background-color: #000;
-height: 100vh;
-width: 100%;
-background-image: url(./img/crudas.jpg);
-background-size: cover;
-background-position: center;
+    margin-top: 75px;
+    background-color: #000;
+    height: 100vh;
+    width: 100%;
+    background-image: url(./img/crudas.jpg);
+    background-size: cover;
+    background-position: center;
 
     h1{
-    margin: 45px 0 25px;
-    padding-top: 20px;
-    color: #fff;
-    font-weight: 900;
+        margin: 45px 0 25px;
+        padding-top: 20px;
+        color: #fff;
+        font-weight: 900;
     }
 
     .formulario{
-    max-width: 600px;
-    color: #8f7c7c;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-left: 100px;
+        max-width: 80vh;
+        color: #8f7c7c;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-left: 90px;
     }
 
     .boton{
@@ -228,38 +230,40 @@ background-position: center;
         padding: 5px 12px;
         font-weight: 900;
         border-radius: 8px;
-        margin: 0 200px 0 200px;
-        min-width: 100px; 
-        }
+        margin: 0 200px 0 180px;
+        min-width: 80px; 
+    }
 
     .boton:hover{
         color: #000;
     }
-    }
+}
 
 /* Inicia page Variedades */
 
 .variedades{
 
     h1{
-    font-weight: 900;
-    margin-top: 100px;
-    margin-left: 25px;  
+        font-weight: 900;
+        margin-top: 100px;
+        margin-left: 25px;  
     }
 
     .variedades-cards{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    @media (min-width: 400px) and (max-width: 800px){
-        display: grid;
-        grid-template-columns: 200px 200px;
-    }
-    @media (max-width: 399px){
-        display: grid;
-        grid-template-columns: 200px;
-    }
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+
+        @media (min-width: 400px) and (max-width: 800px){
+            display: grid;
+            grid-template-columns: 200px 200px;
+        }
+
+        @media (max-width: 399px){
+            display: grid;
+            grid-template-columns: 200px;
+        }
     }
 
 
@@ -273,84 +277,86 @@ background-position: center;
         font-weight: 900;
         text-transform: uppercase;
     }
+
     h2{
-    font-weight: 900;
-    padding: 0;
+        font-weight: 900;
+        padding: 0;
     }
 }
 
 .call-variedades{
-font-size: x-large;
-text-decoration: underline;
-font-weight: 900;
-color: $color-palos;
-display: flex;
-flex-direction: column;
-align-items: center;
-margin: 20px 0 20px;
+    font-size: x-large;
+    text-decoration: underline;
+    font-weight: 900;
+    color: $color-palos;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px 0 20px;
 }
 
 a{
     text-decoration: none;
-    }
+}
+
 a:hover{
     color: #000;
-    }
+}
 
 /* Inicia page Nosotros */
 
 .nosotros{
-margin-top: 75px;
-background-color: #000;
-color: #fff;
-padding-bottom: 10px;
+    margin-top: 75px;
+    background-color: #000;
+    color: #fff;
+    padding-bottom: 10px;
 
     h1{
-    margin-left: 25px;
-    padding: 10px;
-    font-weight: 900;
+        margin-left: 25px;
+        padding: 10px;
+        font-weight: 900;
     }
 
     p{
-    margin-left: 20px;
-    text-align: justify;
-    max-width: 90%;
+        margin-left: 20px;
+        text-align: justify;
+        max-width: 90%;
     }
 
     section img{
-    object-fit: cover;
-    height: 500px;
+        object-fit: cover;
+        height: 500px;
     }
 
     a{
-    margin: 20px;
-    text-decoration: none;
-    text-transform: uppercase;
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px 20px;
-    font-weight: 900;
-    background-color: rgba(204, 56, 56, 0.63);
-    border-radius: 7px;
+        margin: 20px;
+        text-decoration: none;
+        text-transform: uppercase;
+        color: #fff;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 10px 20px;
+        font-weight: 900;
+        background-color: rgba(204, 56, 56, 0.63);
+        border-radius: 7px;
     }
 
     a span:hover{
-    color: #000;
+        color: #000;
     }
 }
 
 /* Inicia page Sugerencias */
 
 .blog{
-margin-top: 75px;
-background-color: #000;
-padding: 25px 10px 25px 20px;
-color: #fff;
+    margin-top: 75px;
+    background-color: #000;
+    padding: 25px 10px 25px 20px;
+    color: #fff;
 
     h1{
-    font-weight: 900;
+        font-weight: 900;
     }
 
     .video{
@@ -361,15 +367,15 @@ color: #fff;
         padding-bottom: 25px;
 
         h2{
-        font-weight: 900;
-        font-size: 25px;
-        color: $color-palos;
-        text-transform: uppercase;
+            font-weight: 900;
+            font-size: 25px;
+            color: $color-palos;
+            text-transform: uppercase;
         }
 
         iframe {
-        max-width: 100%;
-        animation-duration: infinite;
+            max-width: 100%;
+            animation-duration: infinite;
         }
     }
 
@@ -381,45 +387,46 @@ color: #fff;
         padding-bottom: 25px;
 
         h2{
-        font-weight: 900;
-        font-size: 25px;
-        color: $color-palos;
-        text-transform: uppercase;
+            font-weight: 900;
+            font-size: 25px;
+            color: $color-palos;
+            text-transform: uppercase;
         }
+
         img{
-        width: 300px;
-        height: 425px;
-        max-width: 100%;
+            width: 300px;
+            height: 425px;
+            max-width: 100%;
         }
     }
 
     h3{
-    padding-top: 10px;
-    font-weight: 900;
+        padding-top: 10px;
+        font-weight: 900;
     }
 
     .email{
-    color: $color-palos;
-    font-weight: 900;
-    max-width: 600px;
+        color: $color-palos;
+        font-weight: 900;
+        max-width: 600px;
     }
 
     button{
-    margin-left: 80px;
-    margin-bottom: 10px;
-    background-color: $color-palos;
-    color: #fff;
-    margin: 5px;
-    padding: 5px 12px;
-    font-weight: 900;
-    border-radius: 8px;
+        margin-left: 80px;
+        margin-bottom: 10px;
+        background-color: $color-palos;
+        color: #fff;
+        margin: 5px;
+        padding: 5px 12px;
+        font-weight: 900;
+        border-radius: 8px;
     }
 
     button:hover{
-    color: #000;
+        color: #000;
     }
 }
 
 hr{
-margin: 0;
+    margin: 0;
 }
