--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@
   font-style: normal;
   font-size: 14px;
   text-shadow: none;
-  background-color: rgba(204, 56, 56, 0.63);
+  background-color: rgb(144, 44, 44);
   padding: 2px;
   border-radius: 7px;
 }
@@ -46,6 +46,7 @@
   align-items: center;
   text-align: center;
   margin-bottom: 50px;
+  text-shadow: 3px 3px 3px rgba(255, 255, 255, 0.584);
 }
 .jumbotron a {
   background-color: hsla(0, 0%, 0%, 0.737);
@@ -64,41 +65,98 @@
   color: #CC3939;
 }
 
-h2 {
+.sect-variedades {
+  width: 100%;
+  height: auto;
+  margin-bottom: 15px;
+}
+.sect-variedades h2 {
   margin-top: 20px;
   margin-left: 10px;
   font-weight: 700;
+  text-shadow: 2px 2px 2px rgba(113, 108, 108, 0.7);
 }
-
-.cta-variedades a {
+.sect-variedades .cta-variedades {
+  margin: 0 0 15px 20px;
+}
+.sect-variedades .cta-variedades a {
   text-decoration: underline;
-  margin-left: 15px;
   color: #CC3939;
   font-weight: 700;
   font-size: larger;
 }
-
-.cta-variedades a:hover {
+.sect-variedades .cta-variedades a:hover {
   color: #000;
 }
-
-.variedades {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
+.sect-variedades .variedades {
+  display: grid;
+  grid-template-areas: "var1 var2 var3 var4";
+  margin: 0 20px 0 20px;
   justify-content: space-between;
+  gap: 10px;
+  color: #fff;
+  text-align: center;
 }
-.variedades img {
+.sect-variedades .variedades .variedad1 {
+  background-color: #000;
+  border: #CC3939 solid 2px;
+  border-radius: 5px;
+  grid-area: var1;
+  box-shadow: 2px 2px 2px rgba(10, 10, 10, 0.7);
+}
+.sect-variedades .variedades .variedad2 {
+  background-color: #000;
+  border: #CC3939 solid 2px;
+  border-radius: 5px;
+  grid-area: var2;
+  box-shadow: 2px 2px 2px rgba(10, 10, 10, 0.7);
+}
+.sect-variedades .variedades .variedad2 img {
+  width: 220px;
+}
+.sect-variedades .variedades .variedad3 {
+  background-color: #000;
+  border: #CC3939 solid 2px;
+  border-radius: 5px;
+  grid-area: var3;
+  box-shadow: 2px 2px 2px rgba(10, 10, 10, 0.7);
+}
+.sect-variedades .variedades .variedad4 {
+  background-color: #000;
+  border: #CC3939 solid 2px;
+  border-radius: 5px;
+  grid-area: var4;
+  box-shadow: 2px 2px 2px rgba(10, 10, 10, 0.7);
+}
+.sect-variedades .variedades img {
   height: 230px;
-  margin-bottom: 45px;
+  margin-bottom: 15px;
   -o-object-fit: cover;
      object-fit: cover;
-  border-radius: 2px;
 }
-.variedades h4 {
+.sect-variedades .variedades h4 {
   margin-top: 10px;
   font-weight: 700;
   font-size: 20px;
+}
+@media (min-width: 469px) and (max-width: 917px) {
+  .sect-variedades .variedades {
+    grid-template-areas: "var1 var2" "var3 var4";
+    justify-content: space-evenly;
+    row-gap: 20px;
+  }
+  .sect-variedades .variedades img {
+    width: 220px;
+  }
+}
+@media (max-width: 468px) {
+  .sect-variedades .variedades {
+    grid-template-areas: "var1" "var2" "var3" "var4";
+    justify-content: center;
+  }
+  .sect-variedades .variedades img {
+    width: 220px;
+  }
 }
 
 .sug-izq {
@@ -116,6 +174,7 @@ h2 {
 .sug-izq .sug-descuento {
   font-size: 50px;
   color: #CC3939;
+  text-shadow: 3px 3px 5px rgba(255, 203, 203, 0.7);
 }
 .sug-izq a {
   text-decoration: none;
@@ -123,7 +182,7 @@ h2 {
   border-radius: 7px;
   color: #fff;
   padding: 5px 10px;
-  background-color: #CC3939;
+  background-color: rgb(144, 44, 44);
 }
 .sug-izq a:hover {
   color: #000;
@@ -158,7 +217,7 @@ footer a:hover {
 .whatsapp {
   height: 50px;
   width: 50px;
-  background-color: rgba(204, 56, 56, 0.63);
+  background-color: rgba(144, 44, 44, 0.8);
   color: #fff;
   position: fixed;
   text-align: center;
@@ -193,10 +252,11 @@ footer a:hover {
   padding-top: 20px;
   color: #fff;
   font-weight: 900;
+  text-shadow: 3px 3px 3px rgba(125, 115, 115, 0.584);
 }
 .compra .formulario {
   max-width: 80vh;
-  color: #8f7c7c;
+  color: rgb(144, 44, 44);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -208,11 +268,15 @@ footer a:hover {
   padding: 5px 12px;
   font-weight: 900;
   border-radius: 8px;
-  margin: 0 200px 0 180px;
-  min-width: 80px;
+  max-width: 80px;
+  align-self: center;
 }
 .compra .boton:hover {
   color: #000;
+}
+
+input:focus {
+  box-shadow: 0 0 3px 5px rgba(144, 44, 44, 0.8) !important;
 }
 
 /* Inicia page Variedades */
@@ -220,6 +284,7 @@ footer a:hover {
   font-weight: 900;
   margin-top: 100px;
   margin-left: 25px;
+  text-shadow: 2px 2px 2px rgba(113, 108, 108, 0.7);
 }
 .variedades .variedades-cards {
   display: flex;
@@ -227,16 +292,22 @@ footer a:hover {
   flex-wrap: wrap;
   justify-content: space-evenly;
 }
+.variedades .variedades-cards .card {
+  box-shadow: 2px 2px 2px rgba(10, 10, 10, 0.7);
+  border: solid 1px rgba(144, 44, 44, 0.8);
+}
 @media (min-width: 400px) and (max-width: 800px) {
   .variedades .variedades-cards {
     display: grid;
     grid-template-columns: 200px 200px;
+    row-gap: 10px;
   }
 }
 @media (max-width: 399px) {
   .variedades .variedades-cards {
     display: grid;
     grid-template-columns: 200px;
+    row-gap: 10px;
   }
 }
 .variedades .card-img-top {
@@ -303,7 +374,7 @@ a:hover {
   align-items: center;
   padding: 10px 20px;
   font-weight: 900;
-  background-color: rgba(204, 56, 56, 0.63);
+  background-color: rgb(144, 44, 44);
   border-radius: 7px;
 }
 .nosotros a span:hover {
@@ -316,9 +387,16 @@ a:hover {
   background-color: #000;
   padding: 25px 10px 25px 20px;
   color: #fff;
+  background-image: linear-gradient(rgba(181, 62, 62, 0.4), rgba(11, 11, 11, 0.7)), url(./img/fondosug.jpg);
+  background-position: center;
+  background-size: cover;
+}
+.blog p {
+  font-size: 17px;
 }
 .blog h1 {
   font-weight: 900;
+  text-shadow: 3px 3px 3px rgba(125, 115, 115, 0.584);
 }
 .blog .video {
   display: flex;
@@ -332,10 +410,13 @@ a:hover {
   font-size: 25px;
   color: #CC3939;
   text-transform: uppercase;
+  text-shadow: 0 2px 2px rgba(255, 255, 255, 0.915);
+  border: #000;
 }
 .blog .video iframe {
   max-width: 100%;
   animation-duration: infinite;
+  border-radius: 10px;
 }
 .blog .sugerencia {
   display: flex;
@@ -349,22 +430,34 @@ a:hover {
   font-size: 25px;
   color: #CC3939;
   text-transform: uppercase;
+  text-shadow: 0 2px 2px rgba(255, 255, 255, 0.915);
 }
 .blog .sugerencia img {
   width: 300px;
   height: 425px;
   max-width: 100%;
+  border-radius: 10px;
 }
-.blog h3 {
+.blog .sugerencia p {
+  max-width: 70%;
+  text-align: center;
+}
+
+.newsletter {
+  background-color: #000;
+  color: #fff;
+  padding: 0 0 10px 10px;
+}
+.newsletter h3 {
   padding-top: 10px;
   font-weight: 900;
 }
-.blog .email {
-  color: #CC3939;
+.newsletter .email {
+  color: rgba(144, 44, 44, 0.8);
   font-weight: 900;
   max-width: 600px;
 }
-.blog button {
+.newsletter button {
   margin-left: 80px;
   margin-bottom: 10px;
   background-color: #CC3939;
@@ -374,7 +467,7 @@ a:hover {
   font-weight: 900;
   border-radius: 8px;
 }
-.blog button:hover {
+.newsletter button:hover {
   color: #000;
 }
 
