--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@
 .jumbotron {
   margin-top: 75px;
   height: 400px;
-  background-color: #000;
+  background-color: #000 !important;
   background-image: url(./img/fondo.jpg);
   background-size: cover;
   background-position: bottom;
